--- a/index.html
+++ b/index.html
@@ -85,13 +85,17 @@
         </span>
       </h1>
       <div class="header__btn-box">
-        <a href="#" class="btn btn--large btn--blue">Login</a>
-        <a href="#" class="btn btn--large btn--ring">Register</a>
+        <!-- Bubble button -->
+        <a href="#" class="btn btn--large btn--red">Login</a>
+        <a href="#" class="btn btn--large btn--ring btn--anim">Register</a>
       </div>
     </div>
   </header>
   
   <div style="height: 700px;"></div>
+
+  <!-- scripts -->
   <script src="js/app.js"></script>
+
 </body>
 </html>
