--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>hack21 | Home</title>
 </head>
@@ -92,7 +92,28 @@
     </div>
   </header>
   
-  <div style="height: 700px;"></div>
+  <main>
+    <section class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-7">
+            <h2 class="heading-secondary u-margin-bottom-medium about__heading-animated">
+              <span>Challenge.</span> 
+              <span>Revolutionize.</span>
+            </h2>
+            <p class="paragraph">Cupcake ipsum dolor sit. Amet candy canes biscuit chocolate bar sweet donut macaroon. 
+              Chupa chups caramels candy jelly beans candy pie  cookie. Tiramisu jelly beans sesame 
+              snaps jelly-o topping tiramisu apple pie bear claw.</p>
+          </div>
+        </div>
+      </div>
+      <div class="about__bg">
+        2021
+      </div>
+    </section>
+  </main>
+
+  <div style="height: 1000px;"></div>
 
   <!-- scripts -->
   <script src="js/app.js"></script>
