--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="col-sm-7">
             <h2 class="heading-secondary u-margin-bottom-medium about__heading-animated">
               <span>Challenge.</span> 
-              <span>Revolutionize.</span>
+              <span class="heading-secondary--pink">Revolutionize.</span>
             </h2>
             <p class="paragraph">Cupcake ipsum dolor sit. Amet candy canes biscuit chocolate bar sweet donut macaroon. 
               Chupa chups caramels candy jelly beans candy pie  cookie. Tiramisu jelly beans sesame 
@@ -109,6 +109,48 @@
       </div>
       <div class="about__bg">
         2021
+      </div>
+    </section>
+
+    <section class="speakers">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-12">
+            <h2 class="heading-secondary u-margin-bottom-large u-text-align-right">Meet the speakers</h2>
+          </div>
+        </div>
+
+        <div class="img-grid">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="img-grid__container img-grid__container--left">
+                <img src="img/zuck.jpg" alt="" class="img-grid__image">
+                <h3 class="img-grid__text img-grid__text-1">
+                  <span class="img-grid__text--main">Zuckerburg</span>
+                  <span class="img-grid__text--sub">CEO, Facebook</span>
+                </h3>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="img-grid__container img-grid__container--center">
+                <img src="img/pichai.webp" alt="" class="img-grid__image">
+                <h3 class="img-grid__text img-grid__text-2">
+                  <span class="img-grid__text--main">Sundar Pichai</span>
+                  <span  class="img-grid__text--sub">CEO, Google</span>
+                </h3>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="img-grid__container img-grid__container--right">
+                <img src="img/bill.jpg" alt="" class="img-grid__image">
+                <h3 class="img-grid__text img-grid__text-3">
+                  <span class="img-grid__text--main">Bill Gates</span>
+                  <span class="img-grid__text--sub">CEO, Microsoft</span>
+                </h3>
+              </div>
+            </div>
+          </div>
+          </div>
       </div>
     </section>
   </main>
