--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12">
-            <h2 class="heading-secondary u-margin-bottom-large u-text-align-right">Meet the speakers</h2>
+            <h2 class="heading-secondary u-margin-bottom-large u-text-align-right">
+              <span class="heading-secondary--main">Meet the speakers</span>
+              <span class="heading-secondary--sub"># These are the first confirmed speakers for hack21</span>
+            </h2>
           </div>
         </div>
 
@@ -151,6 +154,93 @@
             </div>
           </div>
           </div>
+      </div>
+    </section>
+
+    <section class="schedule">
+      <div class="container">
+        <div class="row u-margin-bottom-large">
+          <div class="col-12">
+            <h2 class="heading-secondary">Schedule</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-6">
+            <h3 class="heading-tertiary u-margin-bottom-medium"># 01 Feb 21 &nbsp;&nbsp;|&nbsp;&nbsp; Day 1</h3>
+            <div class="scheduler">
+              <div class="scheduler__container">
+                <h4 class="scheduler__heading">Talk</h4>
+                <p class="scheduler__body">
+                  <span class="scheduler__body--main">Sundar Pichai, CEO Google</span>
+                  <span class="scheduler__body--time">9.00 to 9.45</span>
+                </p>
+              </div>
+
+              <div class="scheduler__container">
+                <h4 class="scheduler__heading">Talk</h4>
+                <p class="scheduler__body">
+                  <span class="scheduler__body--main">Sundar Pichai, CEO Google</span>
+                  <span class="scheduler__body--time">9.00 to 9.45</span>
+                </p>
+              </div>
+
+              <div class="scheduler__container">
+                <h4 class="scheduler__heading">Talk</h4>
+                <p class="scheduler__body">
+                  <span class="scheduler__body--main">Sundar Pichai, CEO Google</span>
+                  <span class="scheduler__body--time">9.00 to 9.45</span>
+                </p>
+              </div>
+
+              <div class="scheduler__container">
+                <h4 class="scheduler__heading">Talk</h4>
+                <p class="scheduler__body">
+                  <span class="scheduler__body--main">Sundar Pichai, CEO Google</span>
+                  <span class="scheduler__body--time">9.00 to 9.45</span>
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-6">
+            <h3 class="heading-tertiary u-margin-bottom-medium"># 02 Feb 21 &nbsp;&nbsp;|&nbsp;&nbsp; Day 2</h3>
+            <div class="scheduler">
+              <div class="scheduler__container">
+                <h4 class="scheduler__heading">Talk</h4>
+                <p class="scheduler__body">
+                  <span class="scheduler__body--main">Sundar Pichai, CEO Google</span>
+                  <span class="scheduler__body--time">9.00 to 9.45</span>
+                </p>
+              </div>
+
+              <div class="scheduler__container">
+                <h4 class="scheduler__heading">Talk</h4>
+                <p class="scheduler__body">
+                  <span class="scheduler__body--main">Sundar Pichai, CEO Google</span>
+                  <span class="scheduler__body--time">9.00 to 9.45</span>
+                </p>
+              </div>
+
+              <div class="scheduler__container">
+                <h4 class="scheduler__heading">Talk</h4>
+                <p class="scheduler__body">
+                  <span class="scheduler__body--main">Sundar Pichai, CEO Google</span>
+                  <span class="scheduler__body--time">9.00 to 9.45</span>
+                </p>
+              </div>
+              
+              <div class="scheduler__container">
+                <h4 class="scheduler__heading">Talk</h4>
+                <p class="scheduler__body">
+                  <span class="scheduler__body--main">Sundar Pichai, CEO Google</span>
+                  <span class="scheduler__body--time">9.00 to 9.45</span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
