--- a/index.html
+++ b/index.html
@@ -243,6 +243,89 @@
         </div>
       </div>
     </section>
+
+    <section class="rewind">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <div class="rewind__text-container">
+              <h2 class="heading-secondary u-margin-bottom-medium">Rewind hack 20</h2>
+              <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting 
+                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                 when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                 It has survived not only five centuries.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rewind__video-container">
+        <video class="rewind__video" autoplay muted loop>
+          <source src="video/hackAfterMovie.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </section>
+
+    <section class="testimonial">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <div class="testimonial__container">
+              <p class="testimonial__quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+              <div class="testimonial__img-container">
+                <img src="img/quotes.svg" alt="" class="testimonial__img">
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="testimonial__container">
+              <p class="testimonial__quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+              <div class="testimonial__img-container">
+                <img src="img/quotes.svg" alt="" class="testimonial__img">
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-6">
+            <div class="testimonial__container">
+              <p class="testimonial__quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+              <div class="testimonial__img-container">
+                <img src="img/quotes.svg" alt="" class="testimonial__img">
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="testimonial__container">
+              <p class="testimonial__quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+              <div class="testimonial__img-container">
+                <img src="img/quotes.svg" alt="" class="testimonial__img">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="faq">
+      <div class="container">
+        <div class="heading-secondary">
+          <span>Frequently Asked</span>
+          <span>Questions</span>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <div style="height: 1000px;"></div>
