--- a/index.html
+++ b/index.html
@@ -314,14 +314,67 @@
 
     <section class="faq">
       <div class="container">
-        <div class="heading-secondary">
+        <div class="heading-secondary u-margin-bottom-large">
           <span>Frequently Asked</span>
           <span>Questions</span>
         </div>
 
         <div class="row">
           <div class="col-12">
-            
+            <div class="faq__container">
+              <div class="faq__question">
+                When will the event start?
+                <span>+</span>
+              </div>
+              <div class="faq__solution hidden">
+                Before human extinction.
+              </div>
+            </div>
+            <div class="faq__container">
+              <div class="faq__question">
+                Who the hell is organising it 
+                <span>+</span>
+              </div>
+              <div class="faq__solution hidden">
+                Before human extinction.
+              </div>
+            </div>
+            <div class="faq__container">
+              <div class="faq__question">
+                What the fuck are you doing over there?
+                <span>+</span>
+              </div>
+              <div class="faq__solution hidden">
+                Before human extinction.
+              </div>
+            </div>
+            <div class="faq__container">
+              <div class="faq__question">
+                Why  are you chosing the shitty places for hackathons?
+                <span>+</span>
+              </div>
+              <div class="faq__solution hidden">
+                Before human extinction.
+              </div>
+            </div>
+            <div class="faq__container">
+              <div class="faq__question">
+                Will ya for god sake stop doing theis shit!
+                <span>+</span>
+              </div>
+              <div class="faq__solution hidden">
+                  Before human extinction.
+              </div>
+            </div>
+            <div class="faq__container">
+              <div class="faq__question">
+                Ha Ha! Just Kidding...
+                <span>+</span>
+              </div>
+              <div class="faq__solution hidden">
+                  Before human extinction.
+              </div>
+            </div>
           </div>
         </div>
       </div>
