--- a/index.html
+++ b/index.html
@@ -379,9 +379,72 @@
         </div>
       </div>
     </section>
+
+    <section class="sponsors">
+      <div class="container">
+        <div class="sponsors__container sponsors__container--head">
+          <div class="row">
+            <img class="sponsors__img" src="img/sponsors/ieee.svg" alt="">
+          </div>
+        </div>
+
+        <div class="sponsors__container sponsors__container--main">
+          <h5 class="sponsors__heading">MAIN SPONSORS</h5>
+          <div class="row">
+            <img class="sponsors__img" src="img/sponsors/Pinmicro.svg" alt="">
+            <img class="sponsors__img" src="img/sponsors/Tenor Hut.svg" alt="">
+          </div>
+        </div>
+
+        <div class="sponsors__container sponsors__container--student-partners">
+          <h5 class="sponsors__heading">STUDENT PARTNERS</h5>
+          <div class="row">
+            <img class="sponsors__img" src="img/sponsors/msp.svg" alt="">
+            <img class="sponsors__img" src="img/sponsors/msp2.svg" alt="">
+          </div>
+        </div>
+
+        <div class="sponsors__container sponsors__container--community-partners">
+          <h5 class="sponsors__heading">COMMUNITY PARTNERS</h5>
+          <div class="row">
+            <img class="sponsors__img" src="img/sponsors/github.svg" alt="">
+            <img class="sponsors__img" src="img/sponsors/gatsby.svg" alt="">
+            <img class="sponsors__img" src="img/sponsors/kutty coders.svg" alt="">
+          </div>
+          <div class="row">
+            <img class="sponsors__img" src="img/sponsors/devfolio.svg" alt="">
+            <img class="sponsors__img" src="img/sponsors/matic.svg" alt="">
+          </div>
+          <div class="row">
+            <img class="sponsors__img" src="img/sponsors/wolfram.svg" alt="">
+          </div>
+        </div>
+
+        <div class="sponsors__container sponsors__container--media-partners">
+          <h5 class="sponsors__heading">MEDIA PARTNERS</h5>
+          <div class="row">
+            <img class="sponsors__img" src="img/sponsors/safeonnet.svg" alt="">
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
 
-  <div style="height: 1000px;"></div>
+  <footer class="footer">
+    <div class="footer__icons">
+      <a href="#"><img src="img/icons/youtube.svg" alt=""></a>
+      <a href="#"><img src="img/icons/insta.svg" alt=""></a>
+      <a href="#"><img src="img/icons/facebook.svg" alt=""></a>
+      <a href="#"><img src="img/icons/twitter.svg" alt=""></a>
+    </div>
+    <p>
+      <span>Made in assosciation with macehub</span>
+      <span>© All rights reserved - .hack ( );  2021</span>
+    </p>
+  </footer>
+
+  <!-- <div style="height: 1000px;"></div> -->
 
   <!-- scripts -->
   <script src="js/app.js"></script>
