--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <title>hack21 | Home</title>
 </head>
 <body>
-  <nav class="nav">
+  <nav id="nav" class="nav">
     <div class="nav__logo-box">
       <a href="#" class="nav__logo-link">
         <img src="img/logo.png" alt="logo" class="nav__logo">
       </a>
     </div>
     <ul class="nav__list">
-      <li class="nav__item"><a href="#">About</a></li>
-      <li class="nav__item"><a href="#">Schedule</a></li>
-      <li class="nav__item"><a href="#">Speakers</a></li>
-      <li class="nav__item"><a href="#">After Video</a></li>
-      <li class="nav__item"><a href="#">Testimonials</a></li>
+      <li class="nav__item"><a href="#about">About</a></li>
+      <li class="nav__item"><a href="#schedule">Schedule</a></li>
+      <li class="nav__item"><a href="#speakers">Speakers</a></li>
+      <li class="nav__item"><a href="#rewind">After Video</a></li>
+      <li class="nav__item"><a href="#testimonial">Testimonials</a></li>
       <li class="nav__item nav__item--reg"><a href="#">Register</a></li>
     </ul>
   </nav>
@@ -93,7 +93,7 @@
   </header>
   
   <main>
-    <section class="about">
+    <section id="about" class="about">
       <div class="container">
         <div class="row">
           <div class="col-sm-7">
@@ -112,7 +112,7 @@
       </div>
     </section>
 
-    <section class="speakers">
+    <section id="speakers" class="speakers">
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12">
@@ -157,7 +157,7 @@
       </div>
     </section>
 
-    <section class="schedule">
+    <section id="schedule" class="schedule">
       <div class="container">
         <div class="row u-margin-bottom-large">
           <div class="col-12">
@@ -244,7 +244,7 @@
       </div>
     </section>
 
-    <section class="rewind">
+    <section id="rewind" class="rewind">
       <div class="container">
         <div class="row">
           <div class="col-6">
@@ -266,7 +266,7 @@
       </div>
     </section>
 
-    <section class="testimonial">
+    <section id="testimonial" class="testimonial">
       <div class="container">
         <div class="row">
           <div class="col-6">
@@ -312,7 +312,7 @@
       </div>
     </section>
 
-    <section class="faq">
+    <section id="faq" class="faq">
       <div class="container">
         <div class="heading-secondary u-margin-bottom-large">
           <span>Frequently Asked</span>
@@ -380,7 +380,7 @@
       </div>
     </section>
 
-    <section class="sponsors">
+    <section id="sponsors" class="sponsors">
       <div class="container">
         <div class="sponsors__container sponsors__container--head">
           <div class="row">
