--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">  <link rel="stylesheet" href="css/main.css">
   <title>hack21 | Home</title>
 </head>
 <body>
+  <div class="loader u-not-select">
+    <div class="loader__container">
+      <p class="loader__text loader__text--1">Welcome</p>
+      <p class="loader__text loader__text--2">To</p>
+      <p class="loader__text loader__text--3">.hack(&nbsp;);</p>
+      <img class="loader__gif" src="img/loader.gif" alt="">
+    </div>
+  </div>
   <nav id="nav" class="nav">
     <div class="nav__logo-box">
       <a href="#" class="nav__logo-link">
