Code Refactored & Schedule Animation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">  <link rel="stylesheet" href="css/main.css">
-  <title>hack21 | Home</title>
+  <title>Hack | Home</title>
 </head>
 <body>
   <div class="loader u-not-select">
@@ -13,7 +13,12 @@
       <p class="loader__text loader__text--1">Welcome</p>
       <p class="loader__text loader__text--2">To</p>
       <p class="loader__text loader__text--3">.hack(&nbsp;);</p>
-      <img class="loader__gif" src="img/loader.gif" alt="">
+      <!-- <img class="loader__gif" src="img/loader.gif" alt=""> -->
+      <div class="loader__icon">
+        <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+          <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+       </svg>
+      </div>
     </div>
   </div>
   <nav id="nav" class="nav">
@@ -24,8 +29,8 @@
     </div>
     <ul class="nav__list">
       <li class="nav__item"><a href="#about">About</a></li>
-      <li class="nav__item"><a href="#schedule">Schedule</a></li>
       <li class="nav__item"><a href="#speakers">Speakers</a></li>
+      <li class="nav__item"><a href="#schedule">Schedule</a></li>
       <li class="nav__item"><a href="#rewind">After Video</a></li>
       <li class="nav__item"><a href="#testimonial">Testimonials</a></li>
       <li class="nav__item nav__item--reg"><a href="#">Register</a></li>
