--- a/index.html
+++ b/index.html
@@ -140,28 +140,28 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="img-grid__container img-grid__container--left">
-                <img src="img/zuck.jpg" alt="" class="img-grid__image">
+                <img src="img/speakers.jpg" class="img-grid__image">
                 <h3 class="img-grid__text img-grid__text-1">
-                  <span class="img-grid__text--main">Zuckerburg</span>
-                  <span class="img-grid__text--sub">CEO, Facebook</span>
+                  <span class="img-grid__text--main">Coming Soon</span>
+                  <span class="img-grid__text--sub">Coming Soon</span>
                 </h3>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="img-grid__container img-grid__container--center">
-                <img src="img/pichai.webp" alt="" class="img-grid__image">
+                <img src="img/speakers.jpg" alt="" class="img-grid__image">
                 <h3 class="img-grid__text img-grid__text-2">
-                  <span class="img-grid__text--main">Sundar Pichai</span>
-                  <span  class="img-grid__text--sub">CEO, Google</span>
+                  <span class="img-grid__text--main">Coming Soon</span>
+                  <span  class="img-grid__text--sub">Coming Soon</span>
                 </h3>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="img-grid__container img-grid__container--right">
-                <img src="img/bill.jpg" alt="" class="img-grid__image">
+                <img src="img/speakers.jpg" alt="" class="img-grid__image">
                 <h3 class="img-grid__text img-grid__text-3">
-                  <span class="img-grid__text--main">Bill Gates</span>
-                  <span class="img-grid__text--sub">CEO, Microsoft</span>
+                  <span class="img-grid__text--main">Coming Soon</span>
+                  <span class="img-grid__text--sub">Coming Soon</span>
                 </h3>
               </div>
             </div>
