--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Trispace:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <title>Hack | Home</title>
 </head>
 <body>
@@ -24,7 +30,7 @@
   <nav id="nav" class="nav">
     <div class="nav__logo-box">
       <a href="#" class="nav__logo-link">
-        <img src="img/logo.png" alt="logo" class="nav__logo">
+        <img src="img/Logo-techie.png" alt="logo" class="nav__logo">
       </a>
     </div>
     <ul class="nav__list">
@@ -38,7 +44,7 @@
   </nav>
 
   <header class="header u-not-select">
-    <div class="shapes">
+    <!-- <div class="shapes">
       <svg style="overflow: visible;" width="410" height="466" viewBox="0 0 410 466" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g id="shapes">
           <g id="fast">
@@ -88,11 +94,12 @@
           </g>
         </g>
       </svg>
-    </div>
+    </div> -->
 
     <div class="header__text-box">
-      <h1 class="heading-primary u-margin-bottom-small">
-        <span class="heading-primary--main">.hack( );</span>
+      <h1 class="heading-primary u-margin-bottom-medium">
+        <!-- <span class="heading-primary--main">.hack( );</span> -->
+        <span class="heading-primary--main"><img src="./img/hero-glitched.gif" class="hero__logo"/></span>
         <span class="heading-primary--sub">&nbsp;&nbsp;February 1st & 2nd 
           <span class="heading-primary--sub-large">| 2021</span>
         </span>
