--- a/index.html
+++ b/index.html
@@ -284,8 +284,9 @@
         <div class="row">
           <div class="col-6">
             <div class="testimonial__container">
-              <p class="testimonial__quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+              <p class="testimonial__quote">“.hack(); was my first ever hackathon and it helped me get to know many students from different colleges and universities who had some really astonishing ideas. It helped me learn something and realise that I had to develop my skills and that's  my biggest take away from
+                .hack().
+                ”</p>
               <div class="testimonial__img-container">
                 <img src="img/quotes.svg" alt="" class="testimonial__img">
               </div>
@@ -293,8 +294,7 @@
           </div>
           <div class="col-6">
             <div class="testimonial__container">
-              <p class="testimonial__quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+              <p class="testimonial__quote">“I had participated in multiple other hackathons before, and .hack(); was special because my team won 2nd prize. There were a few talks to inspire us at the beginning of the hackathon. All the  teams were very competitive and had high standards. The event was well organized, and the volunteers kept us active throughout the whole event. ”</p>
               <div class="testimonial__img-container">
                 <img src="img/quotes.svg" alt="" class="testimonial__img">
               </div>
@@ -305,8 +305,8 @@
         <div class="row">
           <div class="col-6">
             <div class="testimonial__container">
-              <p class="testimonial__quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+              <p class="testimonial__quote">“Before this, I had a common misconception that a hackathon only involves coding for an entire day. In actual fact, not all hackathons are about coding, as the main aim of a hackathon is problem solving. .hack(); really helped me learn new technologies and meet new people. We experimented with many new concepts and achieved the second prize! 
+                ”</p>
               <div class="testimonial__img-container">
                 <img src="img/quotes.svg" alt="" class="testimonial__img">
               </div>
@@ -314,8 +314,8 @@
           </div>
           <div class="col-6">
             <div class="testimonial__container">
-              <p class="testimonial__quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+              <p class="testimonial__quote">“My team and I had a lot of fun developing our prototype and it was a wonderful opportunity to learn and improve our knowledge. The program was well planned and properly executed, which is something MACE SB can be proud of considering that it is definitely not an easy task to pull off an event at this scale. The event not only allowed us to bond as a team but also network with a lot of other students from various parts of kerala.
+                ”</p>
               <div class="testimonial__img-container">
                 <img src="img/quotes.svg" alt="" class="testimonial__img">
               </div>
