Some Color Modifications

--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
       
       <main>
         <section id="about" class="about">
+          <!-- <img src="./img/scribble.png" alt="pattern" class="about__pattern"> -->
           <div class="container">
             <div class="row">
               <div class="col-sm-7">
                 <h2 class="heading-secondary u-margin-bottom-medium about__heading-animated">
                   <span>Challenge.</span> 
-                  <span class="heading-secondary--pink">Revolutionize.</span>
+                  <!-- class="heading-secondary--pink" -->
+                  <span >Revolutionize.</span>
                 </h2>
                 <p class="paragraph">Cupcake ipsum dolor sit. Amet candy canes biscuit chocolate bar sweet donut macaroon. 
                   Chupa chups caramels candy jelly beans candy pie  cookie. Tiramisu jelly beans sesame 
@@ -90,7 +92,7 @@
             </div>
           </div>
           <div class="about__bg">
-            2021
+            &nbsp;
           </div>
         </section>
     
