--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
       <header class="header u-not-select">
         <div class="header__text-box">
-          <h1 class="heading-primary u-margin-bottom-medium">
+          <h1 class="heading-primary u-margin-bottom-medium section section-main">
             <!-- <span class="heading-primary--main">.hack( );</span> -->
             <span class="heading-primary--main"><img src="./img/hero_heading.png" class="hero__logo"/></span>
             <span class="heading-primary--sub"> 
@@ -75,7 +75,7 @@
       </header>
       
       <main>
-        <section id="about" class="about">
+        <section id="about" class="about section section-about">
           <!-- <img src="./img/scribble.png" alt="pattern" class="about__pattern"> -->
           <div class="container">
             <div class="row">
@@ -259,7 +259,7 @@
                     .hack().
                     ”</p>
                   <div class="testimonial__img-container">
-                    <img src="img/quotes.svg" alt="" class="testimonial__img">
+                    <img src="img/quotes.png" alt="" class="testimonial__img">
                   </div>
                 </div>
               </div>
@@ -267,7 +267,7 @@
                 <div class="testimonial__container">
                   <p class="testimonial__quote">“I had participated in multiple other hackathons before, and .hack(); was special because my team won 2nd prize. There were a few talks to inspire us at the beginning of the hackathon. All the  teams were very competitive and had high standards. The event was well organized, and the volunteers kept us active throughout the whole event. ”</p>
                   <div class="testimonial__img-container">
-                    <img src="img/quotes.svg" alt="" class="testimonial__img">
+                    <img src="img/quotes.png" alt="" class="testimonial__img">
                   </div>
                 </div>
               </div>
@@ -279,7 +279,7 @@
                   <p class="testimonial__quote">“Before this, I had a common misconception that a hackathon only involves coding for an entire day. In actual fact, not all hackathons are about coding, as the main aim of a hackathon is problem solving. .hack(); really helped me learn new technologies and meet new people. We experimented with many new concepts and achieved the second prize! 
                     ”</p>
                   <div class="testimonial__img-container">
-                    <img src="img/quotes.svg" alt="" class="testimonial__img">
+                    <img src="img/quotes.png" alt="" class="testimonial__img">
                   </div>
                 </div>
               </div>
@@ -288,7 +288,7 @@
                   <p class="testimonial__quote">“My team and I had a lot of fun developing our prototype and it was a wonderful opportunity to learn and improve our knowledge. The program was well planned and properly executed, which is something MACE SB can be proud of considering that it is definitely not an easy task to pull off an event at this scale. The event not only allowed us to bond as a team but also network with a lot of other students from various parts of kerala.
                     ”</p>
                   <div class="testimonial__img-container">
-                    <img src="img/quotes.svg" alt="" class="testimonial__img">
+                    <img src="img/quotes.png" alt="" class="testimonial__img">
                   </div>
                 </div>
               </div>
