--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             <span class="heading-primary--main"><img src="./img/hero_heading.png" class="hero__logo"/></span>
             <span class="heading-primary--sub"> 
               <span class="heading-primary--sub-large">2021 | </span>
-              February 1st & 2nd
+              February 19th & 20th
             </span>
           </h1>
           <div class="header__btn-box">
             <!-- Bubble button -->
-            <a href="#" class="btn btn--large btn--ring">Login</a>
-            <a href="#" class="btn btn--large btn--ring btn--anim">Register</a>
+            <a href="#" class="btn btn--large btn--ring">coming soon</a>
+            <a href="#" class="btn btn--large btn--ring btn--anim">coming soon</a>
           </div>
         </div>
       </header>
