--- a/index.html
+++ b/index.html
@@ -85,9 +85,15 @@
                   <!-- class="heading-secondary--pink" -->
                   <span>Revolutionize.</span>
                 </h2>
-                <p class="paragraph">Cupcake ipsum dolor sit. Amet candy canes biscuit chocolate bar sweet donut macaroon. 
-                  Chupa chups caramels candy jelly beans candy pie  cookie. Tiramisu jelly beans sesame 
-                  snaps jelly-o topping tiramisu apple pie bear claw.</p>
+                <p class="paragraph">.hack(); 2021 aids the innovative minds breathe life into their visions, experience the thrill of
+                  working together on problems that keep them on the edge of their seats and learn from skilled
+                  and acclaimed mentors and their own colleagues. We bring to you a hacking culture that is open
+                  to all students, irrespective of age, experience in coding and whatsoever because we value your
+                  enthusiasm and your love for technology and aim to bring to you the best hackathon experience
+                  you can get. Get ready to think out of the box and put your problem solving skills to test as you
+                  hack alongside some of the most brilliant minds from around the globe, all unified under the roof
+                  of .hack(); 2021.
+                  </p>
               </div>
             </div>
           </div>
@@ -236,10 +242,10 @@
               <div class="col-6">
                 <div class="rewind__text-container">
                   <h2 class="heading-secondary u-margin-bottom-medium">Rewind hack 20</h2>
-                  <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting 
-                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                     when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                     It has survived not only five centuries.</p>
+                  <p class="paragraph">We are what we remember. If we lose our memory, we lose our identity and our identity is the
+                    accumulation of our experiences. So let's take a walk down memory lane and revisit all those
+                    moments of fun, coding and the bonds we formed together at hack'20.
+                    </p>
                 </div>
               </div>
             </div>
