--- a/index.html
+++ b/index.html
@@ -445,59 +445,72 @@
             </div>
     
             <div class="row">
+              <!-- <div>Got any queries? Then do look up this section and if you still haven't got your answer send your
+                queries to <a href="mailto:sb.mace@ieee.org">sb.mace@ieee.org</a> </div> -->
               <div class="col-12">
                 <div class="faq__container">
                   <div class="faq__question">
-                    When will the event start?
+                    What is the goal of the hackathon?
                     <span>+</span>
                   </div>
                   <div class="faq__solution hidden">
-                    Before human extinction.
+                    We aim to promote development oriented policies, that support productive activities, decent job
+creation , entrepreneurship, creativity and innovation etc. which aligns with UN sustainable
+goals. Substantially increase the number of youth and adults who have relevant skills for
+employment , jobs and entrepreneurship. To introduce opportunities that students usually lack,
+real life working skills, rapid problem solving skills, thinking in terms of product, engaging in a
+team event where we support and grow and as an exposure to the industry where they get to
+socialise with experts, take their advice , learn from them and build.
                   </div>
                 </div>
                 <div class="faq__container">
                   <div class="faq__question">
-                    Who the hell is organising it 
+                    Who can participate? Are there any prerequisites or required skills? 
                     <span>+</span>
                   </div>
                   <div class="faq__solution hidden">
-                    Before human extinction.
+                    The hackathon is open to all students. Though prior knowledge in coding and hardware would
+be beneficial , teams would also require members who have great ideas and presentation skills.
+In case you are a newbie and want to experience a good hackathon, you are at the right place.
+hack'21 is the right place for you to start!
                   </div>
                 </div>
                 <div class="faq__container">
                   <div class="faq__question">
-                    What the fuck are you doing over there?
+                    How much does it cost?
                     <span>+</span>
                   </div>
                   <div class="faq__solution hidden">
-                    Before human extinction.
+                    The registration for the Hackathon is completely free of cost. So all those who are interested are
+welcome to be a part of .hack(); '21
                   </div>
                 </div>
                 <div class="faq__container">
                   <div class="faq__question">
-                    Why  are you chosing the shitty places for hackathons?
+                    How is the event hosted?
                     <span>+</span>
                   </div>
                   <div class="faq__solution hidden">
-                    Before human extinction.
+                    Due to the pandemic and to ensure the safety of our participants , we have decided to host the
+hackathon online. All students from anywhere across the globe can participate.
                   </div>
                 </div>
                 <div class="faq__container">
                   <div class="faq__question">
-                    Will ya for god sake stop doing theis shit!
+                    Who is organising the hackathon?
                     <span>+</span>
                   </div>
                   <div class="faq__solution hidden">
-                      Before human extinction.
+                    The hackathon is organized by IEEE MACE SB.
                   </div>
                 </div>
                 <div class="faq__container">
                   <div class="faq__question">
-                    Ha Ha! Just Kidding...
+                    Are there prizes?
                     <span>+</span>
                   </div>
                   <div class="faq__solution hidden">
-                      Before human extinction.
+                    Of course yes! Amazing prizes and cool swags awaits you at hack'21.
                   </div>
                 </div>
               </div>
