--- a/index.html
+++ b/index.html
@@ -308,9 +308,10 @@
           <div class="container">
             <div class="sponsors__container sponsors__container--main">
               <h5 class="heading-secondary" style="text-align: center;">our sponsors</h5>
-              <div class="row">
-                <img class="sponsors__img" src="img/sponsors/Pinmicro.svg" alt="">
-                <img class="sponsors__img" src="img/sponsors/Tenor Hut.svg" alt="">
+              <div class="row" style="text-align: center;">
+                <a href="https://www.digitalocean.com/" target="_blank" style="margin: auto;"><img class="sponsors__img" src="img/sponsors/do-white.png" alt=""></a>
+                <a href="https://hac.ieee.org/" target="_blank" style="margin: auto;"><img class="sponsors__img" src="img/sponsors/hac-white.png" alt=""></a>
+                <a href="https://www.computer.org/" target="_blank" style="margin: auto;"><img class="sponsors__img" src="img/sponsors/ieeecs-white.png" alt=""></a>
               </div>
             </div>
           </div>
