comig soon removed

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                   <div class="img-grid__container img-grid__container--left">
                     <img src="img/speakers.jpg" class="img-grid__image">
                     <h3 class="img-grid__text img-grid__text-1">
-                      <span class="img-grid__text--main">Coming Soon</span>
-                      <span class="img-grid__text--sub">Coming Soon</span>
+                      <!-- <span class="img-grid__text--main">Coming Soon</span>
+                      <span class="img-grid__text--sub">Coming Soon</span> -->
                     </h3>
                   </div>
                 </div>
@@ -128,8 +128,8 @@
                   <div class="img-grid__container img-grid__container--center">
                     <img src="img/speakers.jpg" alt="" class="img-grid__image">
                     <h3 class="img-grid__text img-grid__text-2">
-                      <span class="img-grid__text--main">Coming Soon</span>
-                      <span  class="img-grid__text--sub">Coming Soon</span>
+                      <!-- <span class="img-grid__text--main">Coming Soon</span>
+                      <span  class="img-grid__text--sub">Coming Soon</span> -->
                     </h3>
                   </div>
                 </div>
@@ -137,8 +137,8 @@
                   <div class="img-grid__container img-grid__container--right">
                     <img src="img/speakers.jpg" alt="" class="img-grid__image">
                     <h3 class="img-grid__text img-grid__text-3">
-                      <span class="img-grid__text--main">Coming Soon</span>
-                      <span class="img-grid__text--sub">Coming Soon</span>
+                      <!-- <span class="img-grid__text--main">Coming Soon</span>
+                      <span class="img-grid__text--sub">Coming Soon</span> -->
                     </h3>
                   </div>
                 </div>
