--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <section id="sponsors" class="sponsors sponsors-temp">
           <div class="container">
             <div class="sponsors__container sponsors__container--main">
-              <h5 class="heading-secondary" style="text-align: center;">our sponsors</h5>
+              <h5 class="heading-secondary" style="text-align: center; margin-bottom: 5rem;">our sponsors</h5>
               <div class="row" style="text-align: center;">
                 <a href="https://www.digitalocean.com/" target="_blank" style="margin: auto;"><img class="sponsors__img" src="img/sponsors/do-white.png" alt=""></a>
                 <a href="https://hac.ieee.org/" target="_blank" style="margin: auto;"><img class="sponsors__img" src="img/sponsors/hac-white.png" alt=""></a>
