added macehub link

--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
           <a href="#"><img src="img/icons/twitter.svg" alt="" /></a>
         </div>
         <p>
-          <span>Made in assosciation with macehub</span>
+          <span>Made in assosciation with <a  href="https://macehub.in/">macehub</a></span>
           <span>© All rights reserved - .hack ( ); 2021</span>
         </p>
       </footer>
