added social links

--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
               <tr>
                 <th>Sponsorship Benefits</th>
                 <th>Diamond <br />70k-1 lakh $1000</th>
-                <th>Platinum 40k-50k <br />$700</th>
-                <th>Gold 20k-30k <br />$400</th>
+                <th>Platinum <br />40k-50k <br />$700</th>
+                <th>Gold <br />20k-30k <br />$400</th>
               </tr>
               <tr>
                 <td>Logo with T-Shirt</td>
@@ -803,10 +803,17 @@
 
       <footer class="footer">
         <div class="footer__icons">
-          <a href="#"><img src="img/icons/youtube.svg" alt="" /></a>
-          <a href="#"><img src="img/icons/insta.svg" alt="" /></a>
-          <a href="#"><img src="img/icons/facebook.svg" alt="" /></a>
-          <a href="#"><img src="img/icons/twitter.svg" alt="" /></a>
+          <a href="https://www.youtube.com/channel/UC_mRMYAOg4__QRBhZKJMLDQ"><img src="img/icons/youtube.svg" alt="" /></a>
+          <a href="https://www.instagram.com/ieee_mace_sb/"><img src="img/icons/insta.svg" alt="" /></a>
+          <a href="https://www.facebook.com/ieeemace/"><img src="img/icons/facebook.svg" alt="" /></a>
+          <a href="https://twitter.com/MaceSb"><img src="img/icons/twitter.svg" alt="" /></a>
+          <a href="https://www.linkedin.com/company/ieee-student-branch-mace/"><img src="img/icons/linkedin.png" alt="" /></a>
+
+          <!-- <a href="#"><i class="fab fa-facebook-f"></i>
+          <a href="#"><i class="fab "></i>
+          <a href="#"><i class="fab "></i>
+          <a href="#"><i class="fab "></i>
+          <a href="#"><i class="fab "></i> -->
         </div>
         <p>
           <span>Made in assosciation with <a  href="https://macehub.in/">macehub</a></span>
