testimonial speaker name added

--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
                     helped me learn something and realise that I had to develop
                     my skills and that's my biggest take away from .hack(). ”
                   </p>
+                  <p class="testimonial__quote__speaker">~Devika</p>
                   <div class="testimonial__img-container">
                     <img src="img/quotes.png" alt="" class="testimonial__img" />
                   </div>
@@ -347,6 +348,7 @@
                     standards. The event was well organized, and the volunteers
                     kept us active throughout the whole event. ”
                   </p>
+                  <p class="testimonial__quote__speaker">~Joel</p>
                   <div class="testimonial__img-container">
                     <img src="img/quotes.png" alt="" class="testimonial__img" />
                   </div>
@@ -365,6 +367,7 @@
                     learn new technologies and meet new people. We experimented
                     with many new concepts and achieved the second prize! ”
                   </p>
+                  <p class="testimonial__quote__speaker">~Shan</p>
                   <div class="testimonial__img-container">
                     <img src="img/quotes.png" alt="" class="testimonial__img" />
                   </div>
@@ -382,6 +385,7 @@
                     bond as a team but also network with a lot of other students
                     from various parts of kerala. ”
                   </p>
+                  <p class="testimonial__quote__speaker">~Team Koda</p>
                   <div class="testimonial__img-container">
                     <img src="img/quotes.png" alt="" class="testimonial__img" />
                   </div>
