event date in hero section updated

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             /></span>
             <span class="heading-primary--sub">
               <span class="heading-primary--sub-large">2021 | </span>
-              February 19th & 20th
+              February 19th - 21st
             </span>
           </h1>
           <div class="header__btn-box">
